<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activities.LogInActivity">

    <ImageButton
        android:id="@+id/back"
        style="@style/ImageButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/content_descr_back"
        android:src="@drawable/ic_back_shevron" />

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin_fixed_text"
        android:paddingRight="@dimen/activity_horizontal_margin_fixed_text"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_email"
            style="@style/TextHeadingSecondary.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/et_login"
            android:layout_marginTop="@dimen/login_screen_content_margin_top"
            android:paddingEnd="@dimen/edit_text_align"
            android:paddingStart="@dimen/edit_text_align"
            android:text="@string/email_capt" />

        <EditText
            android:id="@id/et_login"
            style="@style/EditTextPrimary.PushRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:ellipsize="end"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:text="@string/default_login_text" />

        <TextView
            android:id="@+id/tv_password"
            style="@style/TextHeadingSecondary.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/et_password"
            android:layout_below="@id/et_login"
            android:layout_marginTop="@dimen/margin_default"
            android:paddingEnd="@dimen/edit_text_align"
            android:paddingStart="@dimen/edit_text_align"
            android:text="@string/password_capt" />

        <EditText
            android:id="@id/et_password"
            style="@style/EditTextPrimary.PushRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_password"
            android:hint="@string/enter_your_password"
            android:inputType="textVisiblePassword"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:text="@string/default_password" />

        <com.applikey.mattermost.views.SafeButton
            android:id="@+id/b_authorize"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/b_restore_password"
            android:layout_alignStart="@+id/et_password"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/sign_in" />

        <com.applikey.mattermost.views.SafeButton
            android:id="@id/b_restore_password"
            style="@style/BorderlessButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/edit_text_align"
            android:layout_marginStart="@dimen/edit_text_align"
            android:layout_marginTop="@dimen/margin_default"
            android:padding="@dimen/button_padding"
            android:text="@string/forgot_password" />

    </RelativeLayout>
</RelativeLayout>
