...
        android:text="@string/enter_server_url_capt" />

    <Spinner
        android:id="@+id/sp_http"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_server"
        android:layout_below="@id/tv_url"
        android:entries="@array/http_types"
        android:visibility="gone" />

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@+id/et_server"
...
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:text="@string/default_server_text" />

    <com.applikey.mattermost.views.SafeButton
        android:id="@+id/b_proceed"
        android:enabled="false"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/edit_text_align"
...
