...
    <string name="your_session_has_expired">Your session has expired</string>
    <string name="example_server">http://server.com/</string>
    <string name="proceed">Proceed</string>
    <string name="enter_mattermost_server_url">Enter Mattermost Server URL</string>
    <string name="next">Next</string>
    <string name="welcome_to_mattermost">Welcome to Mattermost</string>
    <string name="invalid_server_url">We could not connect to the Mattermost server or the server is running in an incompatible version</string>
    <string name="no_teams_received">Could not receive teams</string>
    <string name="please_enter_your_credentials">Please Enter Your Credentials</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
...
